[package]
name = "allowed-proc-mount-types-psp"
version = "1.0.9"
authors = ["Rafael Fernández López <ereslibre@ereslibre.es>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
