[package]
name = "annotations-policy"
version = "0.1.4"
authors = ["Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
criteria_policy_base = { workspace = true, features = ["annotations"] }
k8s-openapi = { workspace = true }
regex = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_yaml = { workspace = true }
