[package]
name = "apparmor-psp"
version = "1.0.11"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
