[package]
name = "capabilities-psp"
version = "1.0.7"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
jsonpath_lib = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
test_helpers = { path = "/home/jvanz/SUSE/policies/policies/policies/capabilities-psp-policy/test_helpers" }
