[package]
name = "deprecated-api-versions"
version = "1.0.5"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
lazy_static = { workspace = true }
semver = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
versions = { path = "/home/jvanz/SUSE/policies/policies/policies/deprecated-api-versions-policy/crates/versions" }
