[package]
name = "env-variable-secrets-scanner-policy"
version = "1.0.10"
authors = ["raulcabello <raul.cabello@suse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.0"
encoding = "0.2.33"
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
rusty_hog_scanner = { rev = "d65f94bd6b18324b089e9b1dcb63e9a5cc00307e", git = "https://github.com/newrelic/rusty-hog/" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
