[package]
name = "environment-variable-policy"
version = "3.0.3"
authors = [
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
  "Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>",
]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
criteria_policy_base = { workspace = true, features = ["env_var"] }
k8s-openapi = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_yaml = { workspace = true }
