[package]
name = "host-namespaces-psp"
version = "1.1.8"
authors = ["Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
