[package]
name = "labels-policy"
version = "0.1.4"
authors = ["Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { workspace = true }
anyhow = { workspace = true }
criteria_policy_base = { path = "../../crates/criteria_policy_base", features = [
  "labels",
] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_yaml = { workspace = true }
