[package]
name = "ns-policyserver-mapper"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
