[package]
name = "persistentvolumeclaim-storageclass-policy"
version = "1.1.5"
authors = ["Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
rstest = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
