[package]
name = "pod-ndots"
version = "1.0.8"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
