[package]
name = "pod-runtime-class-policy"
version = "1.0.7"
authors = ["José Guilherme Vanz <jguilhermevanz@suse.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
