[package]
name = "priority-class-policy"
version = "1.1.3"
authors = ["Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
lazy_static = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
