[package]
name = "probes-policy"
version = "1.0.2"
authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>", "Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slog = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
