[package]
name = "psa-label-enforcer"
version = "1.0.9"
authors = ["José Guilherme Vanz <jguilhermevanz@suse.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
