[package]
name = "raw-validation-policy"
version = "0.1.2"
authors = ["Fabrizio Sestito <fabrizio.sestito@suse.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slog = { workspace = true }
