[package]
name = "readonly-root-filesystem-psp-policy"
version = "1.0.9"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
