[package]
name = "seccomp-psp-policy"
version = "1.0.8"
authors = ["José Guilherme Vanz <jvanz@jvanz.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
