[package]
name = "selinux-psp"
version = "1.0.6"
authors = ["Rafael Fernández López <ereslibre@ereslibre.es>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slog = { workspace = true }
