[package]
name = "selinux-psp"
version = "1.1.1"
authors = ["Rafael Fernández López <ereslibre@ereslibre.es>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slog = { workspace = true }
