[package]
name = "share-pid-namespace-policy"
version = "1.0.11"
authors = ["Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
rstest = { workspace = true }
