[package]
name = "sleeping-policy"
version = "0.1.2"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
jmespath = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slog = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
